config/namespace-acceptance.yaml
apiVersion: v1
# Grouping dengan namespace
# Cara membuat pods dengan namespace : kubectl create -f <file> --namespace <ns>
kind: Namespace
metadata:
  name: acceptance
