config/expose-service-with-load-balancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: expose-service
spec:
  type: LoadBalancer
  selector:
    name: nginx-alpine # Sesuai dengan label pada pods / replicaset yang akan di jalankan 
  ports:
    - port: 80
      targetPort: 80
