config/expose-service-with-node-port.yaml

apiVersion: v1
kind: Service
metadata:
  name: expose-service
spec:
  type: NodePort
  selector:
    name: nginx-alpine # Sesuai dengan label pada pods / replicaset yang akan di jalankan 
  ports:
    - port: 80
      targetPort: 80 
      nodePort: 32613 ## port untuk nodes nya
