config/service-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx-alpine # Sesuai dengan label pada pods / replicaset yang akan di jalankan 
  ports:
    - port: 8080
      targetPort: 80

---
## hanya untuk test
## masuk ke dalam pod curl dengan command
##      kubectl exec -it <nama pod (curl)> -- /bin/sh
## di dalam shell ketikkan `curl http://{CLUSTER_IP}:PORT  
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: pimenvibritania/nginx-curl
