config/expose-service-with-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx-alpine # Sesuai dengan label pada pods / replicaset yang akan di jalankan 
  ports:
    - port: 80
      targetPort: 80 

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: pimenvibritania.local ## untuk local host seting /etc/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: nginx-service ## nama service yang akan di pakai
                  port:
                    number: 80
